--- a/templates/main.conf.erb
+++ b/templates/main.conf.erb
@@ -70,16 +70,24 @@ $interface_policy{'<%= interface_key %>'} = '<%= interface_value %>';
 <% end -%>
 <% end -%>
 
-<%= scope.function_perl_var_print(["$sa_tag_level_deflt", @sa_tag_level_deflt]) %>
-<%= scope.function_perl_var_print(["$sa_tag2_level_deflt", @sa_tag2_level_deflt]) %>
-<%= scope.function_perl_var_print(["$sa_kill_level_deflt", @sa_kill_level_deflt]) %>
-<%= scope.function_perl_var_print(["$sa_dsn_cutoff_level", @sa_dsn_cutoff_level]) %>
+<% if @sa_tag_level_deflt -%>
+$sa_tag_level_deflt = <%= @sa_tag_level_deflt %>
+<% end -%>
+<% if @sa_kill_level_deflt -%>
+$sa_kill_level_deflt = <%= @sa_kill_level_deflt %>
+<% end -%>
+<% if @sa_tag2_level_deflt -%>
+$sa_tag2_level_deflt = <%= @sa_tag2_level_deflt %>
+<% end -%>
+
 <%= scope.function_perl_var_print(["$sa_crediblefrom_dsn_cutoff_level", @sa_crediblefrom_dsn_cutoff_level]) %>
 <%= scope.function_perl_var_print(["$sa_quarantine_cutoff_level", @sa_quarantine_cutoff_level]) %>
 <%= scope.function_perl_var_print(["$penpals_bonus_score", @penpals_bonus_score]) %>
 <%= scope.function_perl_var_print(["$penpals_threshold_high", @penpals_threshold_high]) %>
 <%= scope.function_perl_var_print(["$bounce_killer_score", @bounce_killer_score]) %>
-<%= scope.function_perl_var_print(["$sa_mail_body_size_limit", @sa_mail_body_size_limit]) %>
+<% if @sa_mail_body_size_limit -%>
+$sa_mail_body_size_limit = <%= @sa_mail_body_size_limit %>
+<% end -%>
 <%= scope.function_perl_var_print(["$sa_local_tests_only", @sa_local_tests_only]) %>
 <% if @lookup_sql_dsn.is_a?(Array) -%>
 <% if !@lookup_sql_dsn.empty? -%>
