* Add manage_apt config option and make including the "apt" class selectable * Add the inet_socket_bind option to the config file * Add some documentation to the top of the repos.pp file

--- a/templates/main.conf.erb
+++ b/templates/main.conf.erb
@@ -54,6 +54,7 @@
 <%= scope.function_perl_var_print(["$unix_socketname", @unix_socketname]) %>
 <% if !@inet_socket_port.empty? %>$inet_socket_port = [<% @inet_socket_port.each do |port| %><%= port %>,<% end -%>];
 <% end -%>
+<%= scope.function_perl_var_print(["$inet_socket_bind", @inet_socket_bind]) %>
 
 <% if @policy_bank -%>
 <% @policy_bank.each_pair do |bank_key, bank_hash| -%>
