Fix case on some variable names

--- a/templates/main.conf.erb
+++ b/templates/main.conf.erb
@@ -26,8 +26,8 @@
 <%= scope.function_perl_var_print(["$daemon_user", @daemon_user]) %>
 <%= scope.function_perl_var_print(["$daemon_group", @daemon_group]) %>
 <%= scope.function_perl_var_print(["$mydomain", @mydomain]) %>
-<%= scope.function_perl_var_print(["$MYHOME", @MYHOME]) %>
-<%= scope.function_perl_var_print(["$TEMPBASE", @TEMPBASE]) %>
+<%= scope.function_perl_var_print(["$MYHOME", @myhome]) %>
+<%= scope.function_perl_var_print(["$TEMPBASE", @tempbase]) %>
 <%= scope.function_perl_var_print(["$ENV{TMPDIR}", @tmpdir]) %>
 <%= scope.function_perl_var_print(["$QUARANTINEDIR", @quarantinedir]) %>
 <%= scope.function_perl_var_print(["$quarantine_subdir_levels", @quarantine_subdir_levels]) %>
